Updated project with new changes

--- a/login/numberloginpage.html
+++ b/login/numberloginpage.html
@@ -47,12 +47,12 @@
                             </div>
                             <form>
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Username</label>
-                                    <input type="email" class="form-control" id="username" placeholder="Username or Email">
+                                    <label for="username" class="form-label">Phone Number</label>
+                                    <input type="Number" class="form-control" id="username" placeholder="Enter your Register Number">
                                 </div>
                                 <div>
-                                    <p>If you want to login with Phone Number?</p>
-                                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\numberloginpage.html" class="text-green ms-1" style="text-decoration: none;">Click Here</a>
+                                    <p>If you want to login with Email?</p>
+                                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="text-green ms-1" style="text-decoration: none;">Click Here</a>
                                 </div>
                                 <div class="mb-4">
                                     <label for="password" class="form-label">Password</label>
