--- a/about us/About_us2.html
+++ b/about us/About_us2.html
@@ -21,13 +21,14 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\inedx\index.html">Home</a>
+                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
                     <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
                     <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
                     <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html">Login</a>
+                    <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login/loginpage.html">Login</a>
                 </div>
             </div>
+        </div>
         </div>
     </nav>
 
@@ -129,7 +130,7 @@
                         <h5>About Us</h5>
                         <p>Stocksensi helps investors stay informed and make the best investment decisions with real-time market data and expert analysis.</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 quick-links">
                         <h5>Quick Links</h5>
                         <ul>
                             <li><a href="index.html">Home</a></li>
