--- a/about us/education.html
+++ b/about us/education.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="logo2.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\hp\AppData\Local\HTML\webs\inedx\education.css">
+    <link rel="stylesheet" href="C:\Users\hp\AppData\Local\HTML\webs\education.css">
 </head>
 
 <body style="background-color: #000; color: #fff;">
@@ -21,12 +21,13 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\inedx\index.html">Home</a>
+                <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
                 <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
                 <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
                 <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
-                <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html">Login</a>
-            </ul>
+                <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login/loginpage.html">Login</a>
+        </div>
+        </ul>
         </div>
     </nav>
 
@@ -84,7 +85,7 @@
     <!-- Call to Action -->
     <div class="container text-center my-5">
         <h2 class="text-success">Start Your Investment Journey Now!</h2>
-        <a href="loginpage.html" class="btn btn-success btn-lg mt-3">Get Started</a>
+        <a href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html" class="btn btn-success btn-lg mt-3">Get Started</a>
     </div>
 
     <!-- Footer -->
@@ -98,7 +99,7 @@
                 <div class="col-md-4">
                     <h5 class="text-success">Quick Links</h5>
                     <ul class="list-unstyled">
-                        <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\inedx\index.html">Home</a>
+                        <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
                         <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
                         <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
                         <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
@@ -108,7 +109,7 @@
                 <div class="col-md-4">
                     <h5 class="text-success">Contact Us</h5>
                     <p>Email: joshiman249@gmail.com</p>
-                    <p>Phone: 81074684446</p>
+                    <p>Phone: 8107484446</p>
                 </div>
             </div>
             <div class="text-center mt-3">
