--- a/about us/utlity_clases.html
+++ b/about us/utlity_clases.html
@@ -55,14 +55,13 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\inedx\index.html">Home</a>
-                    <a class="nav-link" href="about_us2.html">About Us</a>
+                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
+                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
                     <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
                     <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
                     <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html">Login</a>
                 </div>
             </div>
-        </div>
     </nav>
 
     <!-- Header -->
