Updated project with new changes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p style="color:#94999fbf">
                 It uses utility classes for typography and spacing to space content out within the larger container.
             </p>
-            <a class="btn btn-primary btn-lg" href="about_us/About_us2.html" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html" role="button">Learn more</a>
         </div>
     </section>
 
