Updated features or fixed bugs

--- a/index.html
+++ b/index.html
@@ -59,37 +59,48 @@
     </nav>
 
 
+
     <!-- Fixed Carousel -->
-    <div id="carouselExampleIndicators " class="carousel slide " data-bs-ride="carousel " data-bs-interval="3000 ">
-        <div class="carousel-indicators ">
-            <button type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide-to="0 " class="active " aria-current="true " aria-label="Slide 1 "></button>
-            <button type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide-to="1 " aria-label="Slide 2 "></button>
-            <button type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide-to="2 " aria-label="Slide 3 "></button>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner ">
-            <div class="carousel-item active ">
-                <img src="firstside.png " class="d-block w-100 " alt="Slide Image " />
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="firstside.png" class="d-block w-100" alt="Slide Image" />
             </div>
-            <div class="carousel-item ">
-                <video autoplay muted loop playsinline class="d-block w-100 ">
-                <source src="https://videos.pexels.com/video-files/5562047/5562047-hd_1920_1080_30fps.mp4 " type="video/mp4 " />
-            </video>
+            <div class="carousel-item">
+                <div class="ratio ratio-16x9">
+                    <video class="d-block w-100" autoplay muted loop playsinline>
+          <source src="https://videos.pexels.com/video-files/5562047/5562047-hd_1920_1080_30fps.mp4"
+            type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+                </div>
             </div>
-            <div class="carousel-item ">
-                <video autoplay muted loop playsinline class="d-block w-100 ">
-                <source src="https://videos.pexels.com/video-files/5726501/5726501-uhd_2560_1440_30fps.mp4 " type="video/mp4 " />
-            </video>
+            <div class="carousel-item">
+                <div class="ratio ratio-16x9">
+                    <video class="d-block w-100" autoplay muted loop playsinline>
+          <source src="https://videos.pexels.com/video-files/5726501/5726501-uhd_2560_1440_30fps.mp4"
+            type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev " type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide="prev ">
-        <span class="carousel-control-prev-icon " aria-hidden="true "></span>
-        <span class="visually-hidden ">Previous</span>
-    </button>
-        <button class="carousel-control-next " type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide="next ">
-        <span class="carousel-control-next-icon " aria-hidden="true "></span>
-        <span class="visually-hidden ">Next</span>
-    </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
     </div>
+
+
 
     <!-- Welcome Section -->
     <section class="welcome-section ">
