--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
             <div class="collapse navbar-collapse " id="navbarNav ">
                 <ul class="navbar-nav ms-auto ">
                     <li class="nav-item ">
-                        <a class="nav-link active " href="C:\Users\hp\AppData\Local\HTML\webs\index.html ">Home</a>
+                        <a class="nav-link active " href="index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html ">About Us</a>
+                        <a class="nav-link " href="about_us/About_us2.html">About Us</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html ">Pricing</a>
+                        <a class="nav-link " href="pricing/pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="markets.html ">Markets</a>
+                        <a class="nav-link " href="markets.html">Markets</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html ">Utilities</a>
+                        <a class="nav-link " href="about_us/utlity_clases.html">Utilities</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html ">Login</a>
+                        <a class="nav-link " href="login/loginpage.html">Login</a>
                     </li>
                     <li> <input type="text " id="search-bar " placeholder="Search... " /></li>
                     <li>
