--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active " href="index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="about_us/About_us2.html">About Us</a>
+                        <a class="nav-link " href="about us/About_us2.html">About Us</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link " href="pricing/pricing.html">Pricing</a>
@@ -44,7 +44,7 @@
                         <a class="nav-link " href="markets.html">Markets</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="about_us/utlity_clases.html">Utilities</a>
+                        <a class="nav-link " href="about us/utlity_clases.html">Utilities</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link " href="login/loginpage.html">Login</a>
@@ -237,7 +237,7 @@
                 <h2 class="text-center mb-5">Explore More</h2>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
-                        <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\education.html" class="card-link">
+                        <a href="about us\education.html" class="card-link">
                             <div class="card text-white section-card text-center">
                                 <div class="card-body">
                                     <h4 class="card-title">Education</h4>
@@ -250,7 +250,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-3">
-                        <a href="about_us/My_invesment.html" class="card-link">
+                        <a href="about us/My_invesment.html" class="card-link">
                             <div class="card text-white section-card text-center">
                                 <div class="card-body">
                                     <h4 class="card-title">My Investment</h4>
@@ -261,7 +261,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-3">
-                        <a href="about_us/projects.html" class="card-link">
+                        <a href="about us/projects.html" class="card-link">
                             <div class="card text-white section-card text-center">
                                 <div class="card-body">
                                     <h4 class="card-title">Projects</h4>
@@ -272,7 +272,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-3">
-                        <a href="about_us/experience.html" class="card-link">
+                        <a href="about us/experience.html" class="card-link">
                             <div class="card text-white section-card text-center">
                                 <div class="card-body">
                                     <h4 class="card-title">Experience</h4>
@@ -296,10 +296,10 @@
                 <div class="col-md-4">
                     <h5>Quick Links</h5>
                     <ul>
-                        <li><a href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a></li>
-                        <li><a href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a></li>
-                        <li><a href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a></li>
-                        <li><a href="C:\Users\hp\AppData\Local\HTML\webs\contact.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about us\About_us2.html">About Us</a></li>
+                        <li><a href="pricing\pricing.html">Pricing</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
