Fixed pricing.html paths and made URLs GitHub-compatible

--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -20,10 +20,10 @@
             <ul class="navbar-nav">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="../index.html">Home</a>
-                    <a class="nav-link" href="../about us\About_us2.html">About Us</a>
+                    <a class="nav-link" href="../about_us/About_us2.html">About Us</a>
                     <a class="nav-link" href="./pricing.html">Pricing</a>
-                    <a class="nav-link active" href="../about us\utlity_clases.html">Utilities</a>
-                    <a class="nav-link " href="../login/loginpage.html">Login</a>
+                    <a class="nav-link active" href="../about_us/utlity_clases.html">Utilities</a>
+                    <a class="nav-link" href="../login/loginpage.html">Login</a>
                 </div>
         </div>
         </ul>
@@ -48,7 +48,8 @@
                     <img src="pricingimg3.jpg" class="course-img w-100" alt="course1">
                     <h4 class="mt-3 course-title">Beginner Stock Market</h4>
                     <p>Learn the fundamentals of trading, stocks, and market psychology from scratch.</p>
-                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
+                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
+
                 </div>
             </div>
 
@@ -107,6 +108,7 @@
         <!-- Footer Section -->
         <footer class="footer">
             <!-- Clickable Section Cards -->
+            <!-- Footer Section Cards -->
             <section class="about-links py-5">
                 <div class="container">
                     <h2 class="text-center mb-5">Explore More</h2>
@@ -114,7 +116,7 @@
 
                         <!-- Education -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\education.html" class="card-link">
+                            <a href="../about_us/education.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">Education</h4>
@@ -126,7 +128,7 @@
 
                         <!-- My Investment -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\My_invesment.html" class="card-link">
+                            <a href="../about_us/My_invesment.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">My Investment</h4>
@@ -138,7 +140,7 @@
 
                         <!-- Projects -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\projects.html" class="card-link">
+                            <a href="../about_us/projects.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">Projects</h4>
@@ -150,7 +152,7 @@
 
                         <!-- Experience -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\experience.html" class="card-link">
+                            <a href="../about_us/experience.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">Experience</h4>
@@ -162,8 +164,8 @@
 
                     </div>
                 </div>
-
             </section>
+
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
