--- a/login/loginpage.html
+++ b/login/loginpage.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.css" rel="stylesheet" />
+    <link href="login\loginpage.css" rel="stylesheet" />
 </head>
 
 <body>
