--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -48,7 +48,7 @@
                     <img src="pricingimg3.jpg" class="course-img w-100" alt="course1">
                     <h4 class="mt-3 course-title">Beginner Stock Market</h4>
                     <p>Learn the fundamentals of trading, stocks, and market psychology from scratch.</p>
-                    <a href="login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
+                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
 
                 </div>
             </div>
