--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -38,7 +38,7 @@
 
     <header class="text-center py-5">
         <h1 class="display-4 course-title" style="color:green">Our Stock Market Courses</h1>
-        <p class="lead text-muted" style="color:white">Boost your trading journey with expert-designed programs</p>
+        <p class="lead text-muted" style="color:white">Bost your trading journey with expert-designed programs</p>
     </header>
     <div class="container">
         <!-- First row of 3 cards -->
