Fixed: login page path from pricing cards

--- a/login/loginpage.html
+++ b/login/loginpage.html
@@ -22,11 +22,11 @@
       </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
-                    <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
-                    <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login/loginpage.html">Login</a>
+                    <a class="nav-link" href="../index.html">Home</a>
+                    <a class="nav-link" href="../about us\About_us2.html">About Us</a>
+                    <a class="nav-link" href="../pricing/pricing.html">Pricing</a>
+                    <a class="nav-link active" href="../about us/utlity_clases.html">Utilities</a>
+                    <a class="nav-link " href="loginpage.html">Login</a>
                 </ul>
             </div>
         </div>
