--- a/login/loginpage.html
+++ b/login/loginpage.html
@@ -62,7 +62,7 @@
                                 <div class="text-center mt-3">
                                     <a href="#" class="text-muted">Forgot password?</a><br />
                                     <span>Don't have an account?</span>
-                                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\signup.html" class="text-green ms-1">Create new</a>
+                                    <a href="signup.html" class="text-green ms-1 ">Create new</a>
                                 </div>
                             </form>
                         </div>
@@ -70,12 +70,12 @@
                 </div>
 
                 <!-- Info Card -->
-                <div class="col-md-6">
-                    <div class="card custom-card2">
-                        <div class="card-body text-center">
-                            <img src="forweb.jpg" alt="StockSensi Illustration" class="description-image mb-3" />
-                            <h3 class="text-green">Welcome to StockSensi</h3>
-                            <p class="mt-2">
+                <div class="col-md-6 ">
+                    <div class="card custom-card2 ">
+                        <div class="card-body text-center ">
+                            <img src="forweb.jpg " alt="StockSensi Illustration " class="description-image mb-3 " />
+                            <h3 class="text-green ">Welcome to StockSensi</h3>
+                            <p class="mt-2 ">
                                 Welcome to StockSensi Master the Market with Knowledge. At StockSensi, we simplify the complexities of the stock market for students, beginners, and curious minds. Whether you're looking to understand the basics of investing, analyze trends, or explore
                                 technical and fundamental analysis, we've got you covered. Join us and build your financial literacy with in-depth tutorials, market insights, case studies, and real-world strategies — all in one place. Learn Smart. Invest
                                 Smarter.
@@ -93,7 +93,7 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js "></script>
 </body>
 
 </html>
