--- a/login/enroll.html
+++ b/login/enroll.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enroll in Course - StockSensi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.css">
+    <link rel="stylesheet" href="pricing.css">
 </head>
 
 <body>
@@ -19,11 +19,11 @@
           </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\inedx\index.html">Home</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
-                    <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html">Login</a>
+                    <a class="nav-link" href="../index.html">Home</a>
+                    <a class="nav-link" href="../about us\About_us2.html">About Us</a>
+                    <a class="nav-link" href="../pricing/pricing.html">Pricing</a>
+                    <a class="nav-link active" href="../about us/utlity_clases.html">Utilities</a>
+                    <a class="nav-link " href="loginpage.html">Login</a>
                 </div>
             </div>
         </div>
