--- a/about us/About_us2.html
+++ b/about us/About_us2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us 2 - StockSensi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="about_us_style.css" />
+    <link rel="stylesheet" href="./About_us_style.css" />
 </head>
 
 <body style="background-color: black; color: white;">
@@ -21,11 +21,11 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
-                    <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
-                    <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
-                    <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login/loginpage.html">Login</a>
+                    <a class="nav-link" href="../index.html">Home</a>
+                    <a class="nav-link" href="../about us\About_us2.html">About Us</a>
+                    <a class="nav-link" href="../pricing/pricing.html">Pricing</a>
+                    <a class="nav-link active" href="../about us/utlity_clases.html">Utilities</a>
+                    <a class="nav-link " href="loginpage.html">Login</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
 
                         <!-- My Investment -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\My_invesment.html" class="card-link">
+                            <a href="../about us/My_invesment.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">My Investment</h4>
@@ -98,7 +98,7 @@
 
                         <!-- Projects -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\projects.html" class="card-link">
+                            <a href="../about us/projects.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">Projects</h4>
@@ -110,7 +110,7 @@
 
                         <!-- Experience -->
                         <div class="col-md-6 col-lg-3">
-                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\experience.html" class="card-link">
+                            <a href="../about us/experience.html" class="card-link">
                                 <div class="card text-white section-card text-center">
                                     <div class="card-body">
                                         <h4 class="card-title">Experience</h4>
@@ -134,9 +134,9 @@
                         <h5>Quick Links</h5>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a></li>
-                            <li><a href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a></li>
-                            <li><a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html">Contact</a></li>
+                            <li><a href="/about us/About_us2.html">About Us</a></li>
+                            <li><a href="../pricing/pricing.html">Pricing</a></li>
+                            <li><a href="../login/loginpage.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
