Fixed pricing.html paths and made URLs GitHub-compatible

--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -20,7 +20,7 @@
             <ul class="navbar-nav">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="../index.html">Home</a>
-                    <a class="nav-link" href="../about_us/About_us2.html">About Us</a>
+                    <a class="nav-link" href="../about us/About_us2.html">About Us</a>
                     <a class="nav-link" href="./pricing.html">Pricing</a>
                     <a class="nav-link active" href="../about_us/utlity_clases.html">Utilities</a>
                     <a class="nav-link" href="../login/loginpage.html">Login</a>
