Fixed pricing.html paths and made URLs GitHub-compatible

--- a/about us/education.html
+++ b/about us/education.html
@@ -44,7 +44,7 @@
                 <div class="card bg-dark border-success h-100 shadow">
                     <img src="https://cdn.pixabay.com/photo/2023/07/20/05/17/ai-generated-8138379_1280.png" class="card-img-top" alt="Stocks">
                     <div class="card-body">
-                        <h5 class="card-title text-success">Why Invest?</h5>
+                        <h5 class="card-title text-light">Why Invest?</h5>
                         <p class="card-text">Grow Your Wealth Over time, the stock market has historically delivered strong returns. By investing, your money has the potential to grow through capital appreciation (rising stock prices) and dividends (company profit sharing).
                             Beat Inflation Keeping your money in a savings account often means it loses value over time due to inflation. Stock investments can help outpace inflation, preserving and increasing your purchasing power. Build Long-Term Security
                             Investing consistently over the years can help you build financial freedom, support retirement goals, or save for major life events like buying a house or funding education. Partial Ownership in Great Companies Buying a share
@@ -57,7 +57,7 @@
                 <div class="card bg-dark border-success h-100 shadow">
                     <img src="https://cdn.pixabay.com/photo/2019/08/26/08/12/street-4431082_1280.jpg" class="card-img-top" alt="Investment">
                     <div class="card-body">
-                        <h5 class="card-title text-success">Market Scope</h5>
+                        <h5 class="card-title text-light">Market Scope</h5>
                         <p class="card-text">Diverse Investment Opportunities The stock market covers a wide range of industries — from technology and healthcare to energy and finance. This gives investors the ability to diversify their portfolios and reduce risk. Global
                             Access With modern platforms, investors can now access not just local companies but also international markets, opening up more growth potential and exposure to global trends. Innovation and Growth Potential Many companies
                             listed on the stock market are leaders in innovation. Investing in these businesses allows you to benefit from the growth of emerging industries like AI, renewable energy, biotech, and more. Economic Indicator The stock market
@@ -70,7 +70,7 @@
                 <div class="card bg-dark border-success h-100 shadow">
                     <img src="https://cdn.pixabay.com/photo/2020/11/27/16/59/man-5782411_1280.jpg" class="card-img-top" alt="Future of Finance">
                     <div class="card-body">
-                        <h5 class="card-title text-success">Future is Digital</h5>
+                        <h5 class="card-title text-light">Future is Digital</h5>
                         <p class="card-text">Tech-Driven Growth Companies leading the digital revolution — like those in AI, cybersecurity, robotics, and software — are showing massive growth potential. Investing in these areas lets you ride the wave of innovation. Changing
                             Consumer Behavior From online shopping to remote work, digital habits are shaping how businesses operate. Investors can benefit by backing companies that are adapting and thriving in this digital shift. Emerging Digital Markets
                             New sectors like cryptocurrencies, blockchain, and the metaverse are creating entirely new investment opportunities that didn’t exist a decade ago. Future-Proofing Your Portfolio Including digital-focused companies in your
