Updated multiple files and renamed 'about us' to 'about_us'

--- a/about us/utlity_clases.html
+++ b/about us/utlity_clases.html
@@ -156,9 +156,9 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about_us2.html">About Us</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="about us\About_us2.html">About Us</a></li>
+                        <li><a href="pricing\pricing.html">Pricing</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
 
