--- a/contact.html
+++ b/contact.html
@@ -87,11 +87,10 @@
                 <div class="col-md-4">
                     <h5 class="text-success">Quick Links</h5>
                     <ul class="list-unstyled">
-                        <a class="nav-link" href="index.html">Home</a>
-                        <a class="nav-link" href="about us/About_us2.html">About Us</a>
-                        <a class="nav-link" href="pricing/pricing.html">Pricing</a>
-                        <a class="nav-link" href="about us/utlity_clases.html">Utilities</a>
-                        <a class="nav-link" href="login/loginpage.html">Login</a>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about us\About_us2.html">About Us</a></li>
+                        <li><a href="pricing\pricing.html">Pricing</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
