--- a/about us/education.html
+++ b/about us/education.html
@@ -21,11 +21,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <a class="nav-link" href="index.html">Home</a>
-                <a class="nav-link" href="about us\About_us2.html">About Us</a>
-                <a class="nav-link" href="pricing\pricing.html">Pricing</a>
-                <a class="nav-link active" href="about us\utlity_clases.html">Utilities</a>
-                <a class="nav-link" href="login\loginpage.html">Login</a>
+                <a class="nav-link" href="../index.html">Home</a>
+                <a class="nav-link" href="../about us\About_us2.html">About Us</a>
+                <a class="nav-link" href="../pricing/pricing.html">Pricing</a>
+                <a class="nav-link active" href="../about us/utlity_clases.html">Utilities</a>
+                <a class="nav-link " href="loginpage.html">Login</a>
             </ul>
         </div>
 
@@ -100,11 +100,10 @@
                 <div class="col-md-4 ">
                     <h5 class="text-success ">Quick Links</h5>
                     <ul class="list-unstyled ">
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\index.html ">Home</a>
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html ">About Us</a>
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html ">Pricing</a>
-                        <a class="nav-link active " href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html ">Utilities</a>
-                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html ">Login</a>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about us\About_us2.html">About Us</a></li>
+                        <li><a href="pricing\pricing.html">Pricing</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 ">
