--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #212529;">
         <div class=" container-fluid ">
             <a class="navbar-brand " href="index.html ">StockSensi</a>
             <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
@@ -49,10 +49,7 @@
                     <li class="nav-item ">
                         <a class="nav-link " href="login/loginpage.html">Login</a>
                     </li>
-                    <li> <input type="text " id="search-bar " placeholder="Search... " /></li>
-                    <li>
-                        <button class="Button ">Search</button>
-                    </li>
+
                 </ul>
             </div>
         </div>
