--- a/login/loginpage.html
+++ b/login/loginpage.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="../about us\About_us2.html">About Us</a>
                     <a class="nav-link" href="../pricing/pricing.html">Pricing</a>
                     <a class="nav-link active" href="../about us/utlity_clases.html">Utilities</a>
-                    <a class="nav-link " href="loginpage.html">Login</a>
+                    <a class="nav-link " href="../login/loginpage.html">Login</a>
                 </ul>
             </div>
         </div>
