--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -20,10 +20,10 @@
             <ul class="navbar-nav">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="../index.html">Home</a>
-                    <a class="nav-link" href="../about us/About_us2.html">About Us</a>
-                    <a class="nav-link" href="./pricing.html">Pricing</a>
-                    <a class="nav-link active" href="../about_us/utlity_clases.html">Utilities</a>
-                    <a class="nav-link" href="../login/loginpage.html">Login</a>
+                    <a class="nav-link" href="../about us\About_us2.html">About Us</a>
+                    <a class="nav-link" href="../pricing/pricing.html">Pricing</a>
+                    <a class="nav-link active" href="../about us/utlity_clases.html">Utilities</a>
+                    <a class="nav-link " href="../login/loginpage.html">Login</a>
                 </div>
         </div>
         </ul>
@@ -38,7 +38,7 @@
 
     <header class="text-center py-5">
         <h1 class="display-4 course-title" style="color:green">Our Stock Market Courses</h1>
-        <p class="lead text-muted" style="color:white">Bost your trading journey with expert-designed programs</p>
+        <p class="lead text-muted" style="color:white">Boost your trading journey with expert-designed programs</p>
     </header>
     <div class="container">
         <!-- First row of 3 cards -->
@@ -48,8 +48,7 @@
                     <img src="pricingimg3.jpg" class="course-img w-100" alt="course1">
                     <h4 class="mt-3 course-title">Beginner Stock Market</h4>
                     <p>Learn the fundamentals of trading, stocks, and market psychology from scratch.</p>
-                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
-
+                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
                 </div>
             </div>
 
@@ -58,8 +57,7 @@
                     <img src="pricingimg2.jpg" class="course-img w-100" alt="course2">
                     <h4 class="mt-3 course-title">Technical Analysis Pro</h4>
                     <p>Master charts, indicators, price action, and risk management techniques.</p>
-                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
-
+                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
                 </div>
             </div>
 
@@ -68,8 +66,7 @@
                     <img src="pricingimg1.jpg" class="course-img w-100" alt="course3">
                     <h4 class="mt-3 course-title">Long-term Investing</h4>
                     <p>Build wealth with long-term strategies, portfolio design, and market cycles.</p>
-                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
-
+                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
                 </div>
             </div>
         </div>
@@ -81,8 +78,7 @@
                     <img src="pricingimg4.jpg" class="course-img w-100" alt="course4">
                     <h4 class="mt-3 course-title">Stock Psychology</h4>
                     <p>Understand trader behavior, emotional discipline, and decision making.</p>
-                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
-
+                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
                 </div>
             </div>
 
@@ -91,8 +87,7 @@
                     <img src="pricingimg5.jpg" class="course-img w-100" alt="course5">
                     <h4 class="mt-3 course-title">Swing Trading</h4>
                     <p>Learn entry/exit strategies, setups, and how to trade the mid-term trend.</p>
-                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
-
+                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
                 </div>
             </div>
 
@@ -101,105 +96,105 @@
                     <img src="pricingimg6.jpg" class="course-img w-100" alt="course6">
                     <h4 class="mt-3 course-title">Dividend Investing</h4>
                     <p>Discover passive income strategies using dividend-paying stocks.</p>
-                    <a href="../login/loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
-
+                    <a href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html" class="btn btn-primary w-100">Enroll Now</a>
                 </div>
             </div>
         </div>
+    </div>
 
 
-        <footer>
-            <!-- Footer Section -->
-            <footer class="footer">
-                <!-- Clickable Section Cards -->
-                <!-- Footer Section Cards -->
-                <section class="about-links py-5">
-                    <div class="container">
-                        <h2 class="text-center mb-5">Explore More</h2>
-                        <div class="row g-4">
-
-                            <!-- Education -->
-                            <div class="col-md-6 col-lg-3">
-                                <a href="../about_us/education.html" class="card-link">
-                                    <div class="card text-white section-card text-center">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Education</h4>
-                                            <p class="card-text">Learn investing fundamentals and smart strategies.</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <!-- My Investment -->
-                            <div class="col-md-6 col-lg-3">
-                                <a href="../about_us/My_invesment.html" class="card-link">
-                                    <div class="card text-white section-card text-center">
-                                        <div class="card-body">
-                                            <h4 class="card-title">My Investment</h4>
-                                            <p class="card-text">View your portfolio and personal investment logs.</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <!-- Projects -->
-                            <div class="col-md-6 col-lg-3">
-                                <a href="../about_us/projects.html" class="card-link">
-                                    <div class="card text-white section-card text-center">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Projects</h4>
-                                            <p class="card-text">Explore the tools and ideas we're building for you.</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <!-- Experience -->
-                            <div class="col-md-6 col-lg-3">
-                                <a href="../about_us/experience.html" class="card-link">
-                                    <div class="card text-white section-card text-center">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Experience</h4>
-                                            <p class="card-text">Our journey, case studies, and success stories.</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                </section>
-
+    <footer>
+        <!-- Footer Section -->
+        <footer class="footer">
+            <!-- Clickable Section Cards -->
+            <section class="about-links py-5">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h5>About Us</h5>
-                            <p>Stocksensi helps investors stay informed and make the best investment decisions with real-time market data and expert analysis.</p>
+                    <h2 class="text-center mb-5">Explore More</h2>
+                    <div class="row g-4">
+
+                        <!-- Education -->
+                        <div class="col-md-6 col-lg-3">
+                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\education.html" class="card-link">
+                                <div class="card text-white section-card text-center">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Education</h4>
+                                        <p class="card-text">Learn investing fundamentals and smart strategies.</p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="col-md-4">
-                            <h5>Quick Links</h5>
-                            <ul>
-                                <li><a href="../index.html">Home</a></li>
-                                <li><a href="../about us/About_us2.html">About Us</a></li>
-                                <li><a href="../pricing/pricing.html">Pricing</a></li>
-                                <li><a href="../login/loginpage.html">Contact</a></li>
-                            </ul>
+
+                        <!-- My Investment -->
+                        <div class="col-md-6 col-lg-3">
+                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\My_invesment.html" class="card-link">
+                                <div class="card text-white section-card text-center">
+                                    <div class="card-body">
+                                        <h4 class="card-title">My Investment</h4>
+                                        <p class="card-text">View your portfolio and personal investment logs.</p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="col-md-4">
-                            <h5>Contact Us</h5>
-                            <p>Email: joshiman249@gmail.com</p>
-                            <p>Phone: 81074684446</p>
+
+                        <!-- Projects -->
+                        <div class="col-md-6 col-lg-3">
+                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\projects.html" class="card-link">
+                                <div class="card text-white section-card text-center">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Projects</h4>
+                                        <p class="card-text">Explore the tools and ideas we're building for you.</p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 text-center">
-                            <p>&copy; 2025 Stocksensi. All rights reserved.</p>
+
+                        <!-- Experience -->
+                        <div class="col-md-6 col-lg-3">
+                            <a href="C:\Users\hp\AppData\Local\HTML\webs\about us\experience.html" class="card-link">
+                                <div class="card text-white section-card text-center">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Experience</h4>
+                                        <p class="card-text">Our journey, case studies, and success stories.</p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
+
                     </div>
                 </div>
-            </footer>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+            </section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>About Us</h5>
+                        <p>Stocksensi helps investors stay informed and make the best investment decisions with real-time market data and expert analysis.</p>
+                    </div>
+                    <div class="col-md-4 quick-links">
+                        <h5>Quick Links</h5>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about us/About_us2.html">About Us</a></li>
+                            <li><a href="pricing/pricing.html">Pricing</a></li>
+                            <li><a href="login/loginpage.html">Contact</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4">
+                        <h5>Contact Us</h5>
+                        <p>Email: joshiman249@gmail.com</p>
+                        <p>Phone: 81074684446</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <p>&copy; 2025 Stocksensi. All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
